--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
-body {
-    overflow-x: hidden; /* Empêche le défilement horizontal */
+.sidebar, .bg{
+    background-color:#5d5d6c;
 }
-
 .logo {
     height: 30px;
     width: auto;
 }
 
+.presentation img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+ 
+shadow{
+    box-shadow: 0 0 12px rgba(227, 240, 252, 1);
+}
 .nav-link {
     font-size: 16px;
     color: #333;
