--- a/style.css
+++ b/style.css
@@ -4,7 +4,35 @@
     box-sizing: border-box;
 }
 
-.sidebar, .bg{
+/* style dark-mode */
+:root{
+    --primary-color:white;
+}
+
+body{
+    background-color:var(--primary-color);
+}
+
+body.dark-mode {
+    background-color: #121212;
+    color:var(--primary-color);
+    transition: color 0.6s ease-in;
+}
+
+body.dark-mode button {
+    background-color:var(--primary-color);
+    color: black!important;
+}
+
+body.dark-mode .menu{
+    background-color: var(--primary-color);
+}
+
+body.dark-mode .nav-link, body.dark-mode .nav-link i{
+    color: black!important;
+}
+
+.menu, .bg{
     background-color:#5d5d6c;
 }
 
@@ -17,7 +45,7 @@
     display: none;
 }
 
-.presentation img{
+.presentation img , .splide__slide video{
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -40,7 +68,7 @@ shadow{
     padding-left: 0;
 }
 
-.nav-link:hover {
+.nav-link a:hover {
     color: #007bff;
 }
 
@@ -69,22 +97,15 @@ shadow{
     display: block;
 }
 
+
 /* Styles pour le menu hamburger (responsive) */
 @media only screen  and (max-width: 991.98px) {
-    .sidebar {
-        position: fixed;
-        top: 56px; /* Hauteur de la barre de navigation */
-        left: -250px; /* Cache le menu hors de l'écran par défaut */
-        width: 250px;
-        transition: left 0.3s ease;
-        z-index: 1000;
-    }
-    .sidebar.show {
-        left: 0; /* Affiche le menu lorsque la classe "show" est ajoutée */
-    }
-
-    .content {
-        padding-left: 0; /* Supprime le padding pour le contenu principal */
+    .menu {
+      display: none!important;
+      z-index: 8000;
+    } 
+    .menu.active {
+       display: block!important;
     }
 }
 
@@ -92,6 +113,10 @@ shadow{
 @media only screen  and (max-width:576px) {
     .input{
          display: none;
+    }
+    input .search{
+        display: block;
+        width: 400px;
     }
     .none{
         display: block;
