--- a/style.css
+++ b/style.css
@@ -7,11 +7,17 @@
 /* style dark-mode */
 :root{
     --primary-color:white;
+    --secondary-color:black;
 }
 
+.bg-input{
+  background-color: rgba(229, 229, 229, 1);
+}
 
 body{
     background-color:var(--primary-color);
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 html.dis{
@@ -19,29 +25,45 @@ html.dis{
     backdrop-filter: blur(0.5);
 }
 body.dark-mode {
-    background-color: #121212;
+    background-color:#121212;
     color:var(--primary-color)!important;
     transition: color 0.6s ease-out;
 }
 
 body.dark-mode button {
     background-color:var(--primary-color);
-    color: black!important;
+    color:var(--primary-color)!important;
 }
 
-body.dark-mode .menu{
-    background-color: var(--primary-color);
+body.dark-mode .menu,body.dark-mode .menu-left {
+    background-color:#121212!important;
 }
-
+body.dark-mode .menu-left .navbar-brand{
+  color:var(--primary-color)!important;
+}
 body.dark-mode  p{
     color:var(--primary-color)!important;
     transition: color 0.6s ease-out;
 }
 
 body.dark-mode .nav-link, body.dark-mode .nav-link i{
-    color: black!important;
+    color:var(--primary-color)!important;
+}
+body::-webkit-scrollbar{
+    background-color:transparent;
+    width: 4px;
+}
+body::-webkit-scrollbar-thumb{
+    background-color: #121212;
+    border-radius: 5px 5px 0 0;
+}
+.body.menu-open{
+  background-color: #121212;
 }
 
+.nav-font{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 .open-menu{
     background-color:transparent;
     border: 1px solid silver;
@@ -49,16 +71,19 @@ body.dark-mode .nav-link, body.dark-mode .nav-link i{
     height:2.5rem;
     border-radius:5px;
 }
-
-.bg-btn
-{
-    background-color: #9370DB;
+.active-menu{
+    border-left: 4px solid black!important;
+    color: var(--primary-color)!important;
 }
-
+.user-describe{
+  position:absolute!important;
+  top:9rem!important;
+  left:1.5rem!important;
+}
 .nav-link:hover{
   background-color: #007bff;
   border-radius:5rem;
-  color: white;
+  color:var(--primary-color);
   transition: 0.3s ease-in;
 }
 
@@ -70,10 +95,16 @@ body.dark-mode .nav-link, body.dark-mode .nav-link i{
     pointer-events: none;
 }
 
-.presentation img , .splide__slide video{
+.slider-item img.light{
     object-fit: cover;
     width: 100%;
     height: 100%;
+    filter: brightness(0.6);
+}
+.users-photo img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 .none{
   display:none;
@@ -81,9 +112,13 @@ body.dark-mode .nav-link, body.dark-mode .nav-link i{
 shadow{
     box-shadow: 0 0 12px rgba(227, 240, 252, 1);
 }
+.mouv-item{
+    position: relative;
+    left: -2rem;
+}
 .nav-link {
     font-size: 16px;
-    color: #333;
+    color: var(--secondary-color)!important;
     transition: color 0.3s ease;
     padding: 3;
     margin-left: -25px;
@@ -93,10 +128,6 @@ shadow{
     font-size: 18px;
     color: inherit;
     padding-left: 0;
-}
-
-.nav-link a:hover {
-    color: #007bff;
 }
 
 .form-control {
@@ -130,9 +161,6 @@ shadow{
     .menu.active {
        left:0;
        transition: left 0.6s ease;
-    }
-    .body.menu-open{
-       background-color: #121212;
     }
 }
 
