--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 :root{
     --primary-color:white;
     --secondary-color:black;
+    --dark-mode:#f5f5f5;
 }
 
 .bg-input{
@@ -19,20 +20,16 @@ body{
     overflow-y: scroll;
     overflow-x: hidden;
 }
-
-html.dis{
-    background-color: #007bff;
-    backdrop-filter: blur(0.5);
-}
 body.dark-mode {
-    background-color:#121212;
-    color:var(--primary-color)!important;
+    background-color:#0d1117;
+    color:var(--secondary-color)!important;
     transition: color 0.6s ease-out;
 }
 
 body.dark-mode button {
     background-color:var(--primary-color);
-    color:var(--primary-color)!important;
+    color:var(--secondary-color)!important;
+    border: none;
 }
 
 body.dark-mode .menu,body.dark-mode .menu-left {
@@ -41,11 +38,16 @@ body.dark-mode .menu,body.dark-mode .menu-left {
 body.dark-mode .menu-left .navbar-brand{
   color:var(--primary-color)!important;
 }
-body.dark-mode  p{
-    color:var(--primary-color)!important;
+body.dark-mode  p {
+    color:#e0e0e0!important;
     transition: color 0.6s ease-out;
 }
-
+body.dark-mode .para{
+    color: var(--primary-color)!important;
+}
+body.dark-mode .mode{
+    background-color:#1f1f1f!important;
+}
 body.dark-mode .nav-link, body.dark-mode .nav-link i{
     color:var(--primary-color)!important;
 }
@@ -57,10 +59,9 @@ body::-webkit-scrollbar-thumb{
     background-color: #121212;
     border-radius: 5px 5px 0 0;
 }
-.body.menu-open{
-  background-color: #121212;
+body.dark-mode #color{
+  color:var(--primary-color);
 }
-
 .nav-font{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -101,10 +102,13 @@ body::-webkit-scrollbar-thumb{
     height: 100%;
     filter: brightness(0.6);
 }
-.users-photo img{
+.users-photo img ,.users-photo-forum img{
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+.card{
+    background-color: inherit!important;
 }
 .none{
   display:none;
@@ -149,7 +153,16 @@ shadow{
 .page.active {
     display: block;
 }
+.enjoy{
+    height:2.5rem;
+}
 
+.sticky {
+    position: sticky;
+    top: 0;
+    right: 0;
+/* Couleur de fond pour la version sticky */
+}
 
 /* Styles pour le menu hamburger (responsive) */
 @media only screen  and (max-width: 991.98px) {
@@ -165,7 +178,7 @@ shadow{
 }
 
 /* disparition du champ  de recherche droite remplacer par un button*/
-@media only screen  and (max-width:576px) {
+@media only screen  and (max-width:786px) {
     .input{
          display: none;
     }
